--- a/src/styles/css/App.css
+++ b/src/styles/css/App.css
@@ -1,3 +1,39 @@
+@font-face {
+  font-family: "Mont";
+  src: url("../fonts/Montserrat-Bold.ttf");
+}
+
+@font-face {
+  font-family: "Mont-Medium";
+  src: url("../fonts/Montserrat-Medium.ttf");
+}
+
+@font-face {
+  font-family: "Mont-Regular";
+  src: url("../fonts/Montserrat-Regular.ttf");
+}
+
+@font-face {
+  font-family: "Quicksand";
+  src: url("../fonts/Quicksand-Variable.ttf");
+}
+
+/* No CSS */
+@font-face {
+  font-family: "FonteTenali";
+  src: url("../fonts/TenaliRamakrishna-Regular.ttf");
+}
+
+@font-face {
+  font-family: "Roboto";
+  src: url("../fonts/RobotoCondensed-Regular.ttf");
+}
+
+@font-face {
+  font-family: "OpenSans";
+  src: url("../fonts/OpenSans-Regular.ttf");
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -7,7 +43,7 @@
 body {
   position: relative;
   font-size: 1rem;
-  overflow: auto;
+  overflow: hidden;
   background: #f4f9ff;
   min-height: 100vh;
 }
@@ -30,4 +66,30 @@ ul {
   display: flex;
   background-color: gray;
   flex-direction: column;
+}
+
+.scroll-to-top {
+  position: fixed;
+  bottom: 2em;
+  right: 2em;
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  background: red;
+  color: white;
+}
+
+.scroll-to-top .icon {
+  margin-top: 16px;
+  margin-left: 18px;
+  animation: scrollTop 0.5s alternate ease infinite;
+}
+
+@keyframes scrollTop {
+  from {
+    transform: translateY(2px);
+  }
+  to {
+    transform: translateY(-1px);
+  }
 }
