--- a/src/styles/css/Bitcoin.css
+++ b/src/styles/css/Bitcoin.css
@@ -1,7 +1,7 @@
 .Bitcoin {
+  display: grid;
   width: 100%;
   height: 33em;
-  display: grid;
   grid-template-rows: 1fr 1fr 1fr;
   justify-content: center;
   align-items: center;
@@ -19,16 +19,14 @@
 .Bitcoin .main-banner img {
   width: 6em;
   height: 6em;
-
 }
 
 .Bitcoin .main-banner h1 {
   margin-left: 0.3em;
   font-family: Mont;
   font-size: 5rem;
-  color: #ffffff  ;
+  color: #f4f9ff;
 }
-
 
 .Bitcoin .conversor-container {
   width: 60em;
@@ -42,7 +40,7 @@
 .bitcoin-scroll-header {
   display: flex;
   width: 100%;
-  background: #002868 ;
+  background: #002868;
   align-items: center;
   justify-content: center;
 }
@@ -60,39 +58,20 @@
 .bitcoin-scroll-header .bitcoin-menu li a {
   font-family: Roboto;
   font-size: 1.6rem;
-  color: #ffffff;
+  color: #f4f9ff;
 }
 
 .bitcoin-scroll-header .bitcoin-menu li a:hover {
-  color: #ffffff;
+  color: #a7092a;
   padding-bottom: 0.5em;
-  border-bottom: 0.2rem solid #ffffff;
+  border-bottom: 0.2rem solid #a7092a;
 }
 
 .bitcoin-scroll-header .bitcoin-menu li a:focus {
   padding-bottom: 0.5em;
-  border-bottom: 0.2rem solid #ffffff;
+  border-bottom: 0.2rem solid #a7092a;
 }
 
-.bitcoincomercial-info {
+.eurocomercial-info {
   height: 30em;
-}
-
-@media (max-width: 800px) {
-  .Bitcoin {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.5em;
-    height: 100%;
-    padding: 0;
-  }
-  .Bitcoin .valor-comercial {
-    height: 45%;
-    width: 70%;
-  }
-  .Bitcoin .valor-turismo {
-    height: 45%;
-    width: 70%;
-  }
 }
