--- a/src/styles/css/Conversor.css
+++ b/src/styles/css/Conversor.css
@@ -40,6 +40,7 @@
   background: #edf1ff;
   height: 100%;
   width: 28em;
+  border-radius: .2rem;
 }
 
 .Conversor .flag-container {
@@ -47,7 +48,7 @@
   margin-bottom: 2em;
   align-items: center;
   padding: 1em 1.5em;
-  background: #29313a;
+  background: #125c6d;
 }
 
 .Conversor .flag-container .flag {
@@ -121,5 +122,6 @@
 @media (max-width: 860px) {
   .Conversor {
     flex-direction: column;
+    margin: 1em;
   }
 }
