--- a/src/styles/css/Euro.css
+++ b/src/styles/css/Euro.css
@@ -1,7 +1,7 @@
 .Euro {
+  display: grid;
   width: 100%;
   height: 33em;
-  display: grid;
   grid-template-rows: 1fr 1fr 1fr;
   justify-content: center;
   align-items: center;
@@ -19,15 +19,15 @@
 .Euro .main-banner img {
   width: 6em;
   height: 6em;
+  border: 0.05em #f4f9ff solid;
 }
 
 .Euro .main-banner h1 {
   margin-left: 0.3em;
   font-family: Mont;
   font-size: 5rem;
-  color: #ffffff;
+  color: #f4f9ff;
 }
-
 
 .Euro .conversor-container {
   width: 60em;
@@ -59,39 +59,20 @@
 .euro-scroll-header .euro-menu li a {
   font-family: Roboto;
   font-size: 1.6rem;
-  color: #ffffff;
+  color: #f4f9ff;
 }
 
 .euro-scroll-header .euro-menu li a:hover {
-  color: #ffffff;
+  color: #a7092a;
   padding-bottom: 0.5em;
-  border-bottom: 0.2rem solid #ffffff;
+  border-bottom: 0.2rem solid #a7092a;
 }
 
 .euro-scroll-header .euro-menu li a:focus {
   padding-bottom: 0.5em;
-  border-bottom: 0.2rem solid #ffffff;
+  border-bottom: 0.2rem solid #a7092a;
 }
 
-.Eurocomercial-info {
+.eurocomercial-info {
   height: 30em;
-}
-
-@media (max-width: 800px) {
-  .Euro {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.5em;
-    height: 100%;
-    padding: 0;
-  }
-  .Euro .valor-comercial {
-    height: 45%;
-    width: 70%;
-  }
-  .Euro .valor-turismo {
-    height: 45%;
-    width: 70%;
-  }
 }
