--- a/src/styles/css/Header.css
+++ b/src/styles/css/Header.css
@@ -1,42 +1,7 @@
-@font-face {
-  font-family: "Mont";
-  src: url("../fonts/Montserrat-Bold.ttf");
-}
-
-@font-face {
-  font-family: "Mont-Medium";
-  src: url("../fonts/Montserrat-Medium.ttf");
-}
-
-@font-face {
-  font-family: "Mont-Regular";
-  src: url("../fonts/Montserrat-Regular.ttf");
-}
-
-@font-face {
-  font-family: "Quicksand";
-  src: url("../fonts/Quicksand-Variable.ttf");
-}
-
-/* No CSS */
-@font-face {
-  font-family: "FonteTenali";
-  src: url("../fonts/TenaliRamakrishna-Regular.ttf");
-}
-
-@font-face {
-  font-family: "Roboto";
-  src: url("../fonts/RobotoCondensed-Regular.ttf");
-}
-
-@font-face {
-  font-family: "OpenSans";
-  src: url("../fonts/OpenSans-Regular.ttf");
-}
-
 .header-container {
   border-bottom: 0.15rem solid;
-  border-image: radial-gradient(ellipse, #e6e9ed, #002868) 1;
+  border-image: radial-gradient(ellipse, #e6e9ed, #53b86a) 1;
+  background: #f4f9ff;
 }
 
 .header {
@@ -44,10 +9,15 @@
   width: 90em;
   margin: auto;
   align-items: center;
-  font-family: Quicksand;
+  font-family: Mont-Medium;
   padding: 0 3em;
   height: 3.8em;
   justify-content: space-between;
+  background-color: #f4f9ff;
+}
+
+.header .Logo {
+  color: #008570;
 }
 
 .header .header-menu {
@@ -60,12 +30,16 @@
 
 .header .header-menu li a {
   font-size: 1.25rem;
-  color: #232b2b;
+  color: #008570;
 }
 
 .header .header-menu li a:hover, .header .header-menu li a:focus {
-  color: #ffffff;
-  border-bottom: 0.1rem solid #ffffff;
+  color: #000;
+  border-bottom: 0.1rem solid #53b86a;
+}
+
+.header .Sobre {
+  color: #008570;
 }
 
 .menu-btn {
@@ -77,8 +51,6 @@
   display: none;
 }
 
-
-
 @media (max-width: 860px) {
   .header {
     height: 3em;
@@ -86,12 +58,10 @@
     padding: 0;
   }
   .header .Logo {
-    color: #ffffff;
     padding-left: 2.7em;
     margin: auto;
   }
   .header .Sobre {
-    color: #ffffff;
     padding-right: 1em;
     font-size: 0.8rem;
   }
@@ -105,13 +75,13 @@
     height: 100%;
     transform: translateX(-50em);
     transition: transform 0.5s ease-in-out;
-    border-right: #ffffff 0.1em solid;
+    border-right: #ccc 0.1em solid;
     opacity: 0.9;
     padding: 2em;
   }
   .header .header-menu li {
     padding: 1em;
-    border-bottom: 0.1em #ffffff;
+    border-bottom: 0.1em #ccc solid;
   }
   .header .header-menu li:last-child {
     border-bottom: 0;
