--- a/src/styles/sass/App.scss
+++ b/src/styles/sass/App.scss
@@ -1,6 +1,6 @@
 @import "_config";
-$header-height: 12%;
-$footer-height: 12%;
+@import "_Fontes";
+
 $aside-width: 10%;
 * {
     box-sizing: border-box;
@@ -11,7 +11,7 @@ $aside-width: 10%;
 body {
     position: relative;
     font-size: 1rem;
-    overflow: auto;
+    overflow: hidden;
     background: #f4f9ff;
     min-height: 100vh;
     // line-height: 1.3;
@@ -38,29 +38,30 @@ ul {
     flex-direction: column;
 }
 
-// .app {
-//     nav.menu {
-//         // background: $default-bg-color;
-//         // border: $default-border;
-//         grid-column: 1/4;
-//     }
-//     div.main {
-//         // background: $default-bg-color;
-//         // border: $default-border;
-//     }
-//     aside.right {
-//         // background: $default-bg-color;
-//         // border: $default-border;
-//     }
-//     aside.left {
-//         // background: $default-bg-color;
+.scroll-to-top{
+    // z-index: 1;
+    position: fixed;
+    bottom: 2em;
+    right: 2em;
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    background: red;
+    color: white;
+    .icon{
+        // margin: 0;
+        margin-top: 16px;
+        margin-left: 18px;
+        animation: scrollTop 0.5s alternate ease infinite;
+    }
+}
+@keyframes scrollTop{
+    from{
+        transform: translateY(2px);
+        
+    }
+    to{
+        transform: translateY(-1px);
 
-//         // border: $default-border;
-//     }
-//     footer.footer {
-//         //
-//         // background: $default-bg-color;
-//         // border: $default-border;
-//         grid-column: 1/4;
-//     }
-// }
+    }
+}
