--- a/src/styles/sass/Bitcoin.scss
+++ b/src/styles/sass/Bitcoin.scss
@@ -1,83 +1,79 @@
-@import "_Fontes";
 
 .Bitcoin {
-    // border: grey 2px solid;
     display: grid;
-    height: 50vh;
-    width: 50vw;
+    width: 100%;
+    height: 33em;
+    grid-template-rows: 1fr 1fr 1fr;
     justify-content: center;
     align-items: center;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    font-family: Quicksand;
+    background: #29313A;
 
-    .logo-moeda {
-        // border: grey 2px solid;
+    .main-banner {
+        padding: 2em;
+        margin-top: 2em;
         display: flex;
         align-items: center;
         justify-content: center;
-        grid-column: 2/4;
-        grid-row: 1/2;
-        // margin-top: 10em;
         img {
-            
-            // width: 5em;
-             height: 5em;
-            margin: auto;
+            width: 6em;
+            height: 6em;
+
+        }
+        h1 {
+            margin-left: 0.3em;
+            font-family: Mont;
+            font-size: 5rem;
+            color: #f4f9ff;
         }
     }
-
-    .nome-moeda {
-        //  border: grey 2px solid;
+    .conversor-container {
+        width: 60em;
+        margin: 2em;
         display: flex;
         justify-content: center;
-        grid-row: 2/3;
-        grid-column: 2/4;
-        margin-bottom: 2em;
-        h1{
-            font-family: Quicksand;
-            color: #F5F7F6;
-            font-size: 2.5em;
-        }
+        height: 15em;
+        font-family: Mont;
+        // border: 0.1em red solid;
     }
 
-    .valor {
-         border: grey 2px solid;
+   
+}
+
+.bitcoin-scroll-header {
+    display: flex;
+    width: 100%;
+    background: #002868;
+    align-items: center;
+    justify-content: center;
+    .bitcoin-menu {
+        height: 5em;
+        // width: 90%;
+        // border: 0.05em #edf1ff solid;
         display: flex;
-        border: grey 2px solid;
-        justify-content: space-between;
         align-items: center;
-        grid-row: 3/4;
-        grid-column: 2/4;
-        height: 6em;
-        border: .3em solid transparent;
-        border-radius: 5em;
-        background-image: linear-gradient(#F5F7F6, #F5F7F6),
-        radial-gradient(circle at top left, #fd00da, #19d7f8);
-        background-origin: border-box;
-        background-clip: content-box, border-box;
-        margin-bottom: 10em;
-        .cifrao{
-            font-size: 2em;
-            color: #58B467;
-            margin-left: 3em;
-        }
-        .cambio{
-            color: #58B467;
-            margin-right: 3.2em;
-            // border: grey 1px solid;           
-            font-size: 5em;
-        }
-    }
+        li {
+            //    margin: auto;
+            padding: 0 6em;
+            a {
+                font-family: Roboto;
+                font-size: 1.6rem;
+                color: #f4f9ff;
 
-    .atualizado {
-        display: flex;
-        justify-content: center;
-        grid-column: 2/4;
-        grid-row: 4/5;
-        margin-bottom: 6em;
-        p {
-            font-size: 1em;
+                &:hover {
+                    color: #a7092a;
+                    padding-bottom: 0.5em;
+                    border-bottom: 0.2rem solid #a7092a;
+                }
+                &:focus {
+                    padding-bottom: 0.5em;
+                    border-bottom: 0.2rem solid #a7092a;
+                }
+            }
         }
     }
+}
+
+.eurocomercial-info {
+    height: 30em;
+    
 }
