--- a/src/styles/sass/Dolar.scss
+++ b/src/styles/sass/Dolar.scss
@@ -1,128 +1,11 @@
-// @import "_Fontes";
-
-// .Dolar {
-//     // border: grey 2px solid;
-//     display: grid;
-//     height: 50vh;
-//     width: 50vw;
-//     justify-content: center;
-//     align-items: center;
-//     grid-template-rows: 1fr 1fr 1fr 1fr;
-//     grid-template-columns: 1fr 1fr 1fr 1fr;
-//     font-family: Mont;
-
-//     .logo-moeda {
-//         // border: grey 2px solid;
-//         display: flex;
-//         align-items: center;
-//         justify-content: center;
-//         grid-column: 2/4;
-//         grid-row: 1/2;
-//         // margin-top: 10em;
-//         img {
-//             width: 5em;
-//             height: 5em;
-//             margin: auto;
-//         }
-//     }
-
-//     .nome-moeda {
-//         //  border: grey 2px solid;
-//         display: flex;
-//         justify-content: center;
-//         grid-row: 2/3;
-//         grid-column: 2/4;
-//         margin-bottom: 2em;
-//         h1 {
-//             font-family: Mont;
-//             color: #29313a;
-//             font-size: 5em;
-//         }
-//     }
-
-//     .valor {
-
-//         display: flex;
-//         justify-content: center;
-//         align-items: center;
-//         grid-row: 3/4;
-//         grid-column: 2/4;
-
-//         .cifrao {
-//             font-size: 5em;
-//             color: #58b467;
-//         }
-//         .cambio {
-//             color: #58B467;
-//             // margin-right: 3.2em;
-//             // border: grey 1px solid;
-//             font-size: 15em;
-//         }
-//     }
-
-//     .atualizado {
-//         display: flex;
-//         justify-content: center;
-//         grid-column: 2/4;
-//         grid-row: 4/5;
-//         // margin-bottom: 6em;
-//         p {
-
-//             font-size: 1em;
-//         }
-//     }
-// }
-
-// .Dolar {
-//     display: flex;
-//     width: 100%;
-//     // height: 100;
-//     // padding: 0.5em;
-//     justify-content: space-around;
-//     border: 0.1em green solid;
-
-//     .valor-comercial {
-//         width: 45%;
-//     }
-//     .valor-turismo {
-//         width: 45%;
-//     }
-//     .valor-comercial,
-//     .valor-turismo {
-//         display: flex;
-//         flex-direction: column;
-//         justify-content: space-around;
-//         padding: 3.5em 2.5em;
-//         background-color: #edf1ff;
-//         border: 0.2em solid;
-//         border-image: linear-gradient(#b60017, rgba(0, 0, 0, 0)) 1 100%;
-
-//         .titulo {
-//             // font-size: 2rem;
-//             // padding: 0.3em;
-//             font-size: 2.2rem;
-//         }
-//         .cambio {
-//             // margin: auto;
-//             color: #58b467;
-//             font-size: 3.5rem;
-//         }
-
-//         p {
-//             font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-//             font-size: 0.7rem;
-//         }
-//     }
-// }
-
 .Dolar {
-    width: 100%;
-    height: 33em;
     display: grid;
+    width: 100%;
+    height: 35em;
     grid-template-rows: 1fr 1fr 1fr;
     justify-content: center;
     align-items: center;
-    background: #29313A;
+    background: #2F4858;
 
     .main-banner {
         padding: 2em;
@@ -146,9 +29,9 @@
         display: flex;
         align-items: center;
         content: "8644";
-        color: #EDF1FF;
+        color: #edf1ff;
         font-size: 4rem;
-        padding: .1em;
+        padding: 0.1em;
     }
     .conversor-container {
         width: 60em;
@@ -158,13 +41,14 @@
         height: 15em;
         font-family: Mont;
         // border: 0.1em red solid;
+        
     }
 }
 
 .dollar-scroll-header {
     display: flex;
     width: 100%;
-    background: #002868;
+    background: #125c6d;
     align-items: center;
     justify-content: center;
     .dollar-menu {
@@ -195,26 +79,73 @@
     }
 }
 
-.dolarcomercial-info {
-    height: 30em;
-    
+.dolar-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    background: #edf1ff;
+    // border: 0.2rem solid #a7092a;
+
+    .dolarcomercial-info,
+    .dolarturismo-info{
+        // border: 0.2rem solid #a7092a;
+        display: flex;
+        flex-direction: column;
+        width: 50%;
+        h2 {
+            width: 100%;
+            font-family: Mont-Medium;
+            font-size: 3rem;
+            margin-top: 2rem;
+            margin-bottom: 2rem;
+            color: #125c6d;
+            // border: 0.2rem solid #a7092a;
+        }
+        p {
+            padding: .3em;
+            line-height: 2rem;
+            font-family: Roboto;
+            font-size: 1.2rem;
+            color: #41493a;
+            text-align: justify;
+        }
+        h3 {
+            padding: .3em;
+            font-family: Mont-Medium;
+            font-size: 1.3rem;
+            margin-top: 1rem;
+            margin-bottom: 1rem;
+            color: #125c6d;
+        }
+    }
+    .dolarcomercial-info{
+        h2{
+            margin-top: 3em;
+        }
+    }
 }
 @media (max-width: 800px) {
     .Dolar {
-        display: flex;
-        flex-direction: column;
+        grid-template-rows: 1fr 1fr 1fr;
+        height: 50em;
+        justify-content: center;
         align-items: center;
-        gap: 0.5em;
-        height: 100%;
-        padding: 0;
-
-        .valor-comercial {
-            height: 45%;
-            width: 70%;
+        .main-banner{
+            display: flex;
+            padding:0;
+            margin: 0;
         }
-        .valor-turismo {
-            height: 45%;
-            width: 70%;
+        .conversor-container{
+            width: 50%;
+            flex-direction: column;
+            margin-top: 1em;
+            padding: 0;
+            .conversor-origem{
+                margin-bottom: 3em;
+            }
         }
+        
     }
 }
