--- a/src/styles/sass/Grafico.scss
+++ b/src/styles/sass/Grafico.scss
@@ -1,32 +1,35 @@
-@import '_Fontes';
+@import "_Fontes";
 
 .grafico-container {
     display: flex;
     flex-direction: column;
     height: 30em;
     width: 100%;
+    // border: 0.05rem green solid;
     justify-content: center;
     align-items: center;
-    background-color: #EDF1FF;
-    .Grafico{
-        background-color: #EDF1FF;
+    background-color: #edf1ff;
+    .Grafico {
+        // border: 0.05rem green solid;
+        background-color: #edf1ff;
         border-radius: 5px;
         height: 100%;
-        width: 60%;
-        padding: 1em;
+        width: 95%;
+        padding: 1rem;
     }
-    .grafico-header{
+    .grafico-header {
+        // border: 0.2rem solid #a7092a;
         display: flex;
-        padding: .5em;
-        justify-content: center;
-        align-items: center; 
-        width: 100%;
-        height: 3em;
-        background: #EDF1FF;
-        color: 243A5E;
-        font-size: 3em;
-        font-family: Roboto;
+        width: 50%;
+        margin-top: 2rem;
+        h2 {
+            width: 100%;
+            font-family: Mont-Medium;
+            font-size: 3rem;
+            margin-top: 2rem;
+            margin-bottom: 2rem;
+            color: #125c6d;
+            // border: 0.2rem solid #a7092a;
+        }
     }
-   
 }
-
