--- a/src/styles/css/Dolar.css
+++ b/src/styles/css/Dolar.css
@@ -1,19 +1,31 @@
 .Dolar {
+  display: -ms-grid;
   display: grid;
   width: 100%;
   height: 35em;
-  grid-template-rows: 1fr 1fr 1fr;
-  justify-content: center;
-  align-items: center;
-  background: #2F4858;
+  -ms-grid-rows: 1fr 1fr 1fr;
+      grid-template-rows: 1fr 1fr 1fr;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: #2f4858;
 }
 
 .Dolar .main-banner {
   padding: 2em;
   margin-top: 2em;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .Dolar .main-banner img {
@@ -30,8 +42,12 @@
 }
 
 .Dolar .Arrow {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   content: "8644";
   color: #edf1ff;
   font-size: 4rem;
@@ -41,24 +57,38 @@
 .Dolar .conversor-container {
   width: 60em;
   margin: 2em;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   height: 15em;
   font-family: Mont;
 }
 
 .dollar-scroll-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 100%;
   background: #125c6d;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .dollar-scroll-header .dollar-menu {
   height: 5em;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .dollar-scroll-header .dollar-menu li {
@@ -83,18 +113,32 @@
 }
 
 .dolar-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100%;
   background: #edf1ff;
 }
 
 .dolar-info .dolarcomercial-info,
 .dolar-info .dolarturismo-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   width: 50%;
 }
 
@@ -110,7 +154,7 @@
 
 .dolar-info .dolarcomercial-info p,
 .dolar-info .dolarturismo-info p {
-  padding: .3em;
+  padding: 0.3em;
   line-height: 2rem;
   font-family: Roboto;
   font-size: 1.2rem;
@@ -120,7 +164,7 @@
 
 .dolar-info .dolarcomercial-info h3,
 .dolar-info .dolarturismo-info h3 {
-  padding: .3em;
+  padding: 0.3em;
   font-family: Mont-Medium;
   font-size: 1.3rem;
   margin-top: 1rem;
@@ -132,21 +176,92 @@
   margin-top: 3em;
 }
 
+.dolar-info .Carousel {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 700px;
+  height: 500px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  left: 30%;
+}
+
+.dolar-info .Carousel .carousel-item {
+  width: 700px;
+  height: 500px;
+  border: 10px red solid;
+}
+
+.dolar-info .Carousel .carousel-item .carousel-img {
+  width: 330px;
+  height: 180px;
+  position: absolute;
+  top: 1em;
+  left: 14em;
+}
+
+.dolar-info .Carousel .carousel-item .carousel-imgV {
+  width: 330px;
+  height: 180px;
+  position: absolute;
+  top: 13em;
+  left: 14em;
+}
+
+.dolar-info .Carousel .carousel-item .carousel-caption {
+  bottom: 0;
+  color: black;
+  border-bottom: 2px;
+  border: 10px coral solid;
+}
+
+.dolar-info .Carousel .carousel-item .carousel-caption h3 {
+  font-size: 10px;
+  bottom: 10em;
+  font-style: normal;
+}
+
+.dolar-info .Carousel .carousel-item .carousel-caption p {
+  font-size: 10px;
+  bottom: 15em;
+  left: 14em;
+  font-style: normal;
+}
+
 @media (max-width: 800px) {
   .Dolar {
-    grid-template-rows: 1fr 1fr 1fr;
+    -ms-grid-rows: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
     height: 50em;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .Dolar .main-banner {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     padding: 0;
     margin: 0;
   }
   .Dolar .conversor-container {
     width: 50%;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     margin-top: 1em;
     padding: 0;
   }
