--- a/src/styles/css/Header.css
+++ b/src/styles/css/Header.css
@@ -1,18 +1,25 @@
 .header-container {
   border-bottom: 0.15rem solid;
-  border-image: radial-gradient(ellipse, #e6e9ed, #53b86a) 1;
+  -o-border-image: radial-gradient(ellipse, #e6e9ed, #53b86a) 1;
+     border-image: radial-gradient(ellipse, #e6e9ed, #53b86a) 1;
   background: #f4f9ff;
 }
 
 .header {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 90em;
   margin: auto;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   font-family: Mont-Medium;
   padding: 0 3em;
   height: 3.8em;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   background-color: #f4f9ff;
 }
 
@@ -21,6 +28,8 @@
 }
 
 .header .header-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -73,8 +82,12 @@
     background: #e6e9ed;
     width: 50%;
     height: 100%;
-    transform: translateX(-50em);
+    -webkit-transform: translateX(-50em);
+            transform: translateX(-50em);
+    -webkit-transition: -webkit-transform 0.5s ease-in-out;
+    transition: -webkit-transform 0.5s ease-in-out;
     transition: transform 0.5s ease-in-out;
+    transition: transform 0.5s ease-in-out, -webkit-transform 0.5s ease-in-out;
     border-right: #ccc 0.1em solid;
     opacity: 0.9;
     padding: 2em;
@@ -87,7 +100,8 @@
     border-bottom: 0;
   }
   .header .header-menu.show {
-    transform: translateX(-0.5em);
+    -webkit-transform: translateX(-0.5em);
+            transform: translateX(-0.5em);
   }
   .menu-btn {
     display: block;
