--- a/src/styles/css/Main.css
+++ b/src/styles/css/Main.css
@@ -37,7 +37,8 @@
 @media (max-width: 800px) {
   .main {
     width: 100%;
-    grid-template-columns: 1fr;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
     padding: 3em 0em;
   }
 }
