--- a/src/styles/css/Conversor.css
+++ b/src/styles/css/Conversor.css
@@ -35,8 +35,13 @@
 }
 
 .Conversor {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   background: #edf1ff;
   height: 100%;
   width: 28em;
@@ -44,9 +49,13 @@
 }
 
 .Conversor .flag-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin-bottom: 2em;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 1em 1.5em;
   background: #125c6d;
 }
@@ -64,10 +73,13 @@
 }
 
 .Conversor .input-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin-right: 1em;
   margin-top: 0.5em;
-  align-self: center;
+  -ms-flex-item-align: center;
+      align-self: center;
 }
 
 .Conversor .input-container p {
@@ -105,6 +117,21 @@
   -moz-appearance: textfield;
 }
 
+.Conversor .input-container .input-valor::-webkit-input-placeholder {
+  color: #000;
+  text-align: center;
+}
+
+.Conversor .input-container .input-valor:-ms-input-placeholder {
+  color: #000;
+  text-align: center;
+}
+
+.Conversor .input-container .input-valor::-ms-input-placeholder {
+  color: #000;
+  text-align: center;
+}
+
 .Conversor .input-container .input-valor::placeholder {
   color: #000;
   text-align: center;
@@ -121,7 +148,10 @@
 
 @media (max-width: 860px) {
   .Conversor {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     margin: 1em;
   }
 }
