--- a/src/styles/css/Footer.css
+++ b/src/styles/css/Footer.css
@@ -36,8 +36,12 @@
 
 .footer {
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   background: #29313a;
   height: 5em;
   position: relative;
@@ -48,7 +52,11 @@
 
 .footer ul {
   width: 90em;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
   list-style: none;
 }
