--- a/src/styles/css/Grafico.css
+++ b/src/styles/css/Grafico.css
@@ -35,12 +35,21 @@
 }
 
 .grafico-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   height: 30em;
   width: 100%;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: #edf1ff;
 }
 
@@ -53,6 +62,8 @@
 }
 
 .grafico-container .grafico-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 50%;
   margin-top: 2rem;
