--- a/src/styles/css/Logo.css
+++ b/src/styles/css/Logo.css
@@ -1,8 +1,15 @@
 aside.logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   border-bottom: 0.3em solid transparent;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#42455a), to(#C3E3E7)), radial-gradient(circle, #fd00da, #19d7f8);
   background-image: linear-gradient(#42455a, #C3E3E7), radial-gradient(circle, #fd00da, #19d7f8);
   background-origin: border-box;
   background-clip: content-box, border-box;
