--- a/src/styles/sass/Dolar.scss
+++ b/src/styles/sass/Dolar.scss
@@ -120,9 +120,16 @@
         }
     }
     .dolarcomercial-info {
+
+
+   
+
         h2 {
             margin-top: 3em;
+           
         }
+
+        
     }
 
     h2{
@@ -136,11 +143,17 @@
         text-align: center;
     }
 
-    .Carousel {
+    .sobreodolar-info{
+        border: 0.2rem solid #a7092a;
         display: flex;
+        flex-direction: column;
         align-items: center;
-        justify-content: center;
+        justify-content:center;
         text-align: center;
+    
+
+    .Carousel {
+        
         width: 1000px;
         height: 900px;
         flex-direction: column;
@@ -200,6 +213,7 @@
             }
         }
     }
+  }
 }
 @media (max-width: 800px) {
     .Dolar {
