--- a/src/styles/sass/Dolar.scss
+++ b/src/styles/sass/Dolar.scss
@@ -125,78 +125,56 @@
         }
     }
 
-    h2{
-
-        width: 100%;
-        font-family: Mont-Medium;
-        font-size: 3rem;
-        margin-top: 2rem;
-        margin-bottom: 2rem;
-        color: #125c6d;
-        text-align: center;
-    }
-
     .Carousel {
         display: flex;
         align-items: center;
         justify-content: center;
-        text-align: center;
-        width: 1000px;
-        height: 900px;
+        width: 700px;
+        height: 500px;
         flex-direction: column;
+        left: 30%;
 
         .carousel-item {
             
-            width: 900px;
-            height: 800px;
+            width: 700px;
+            height: 500px;
+            border: 10px red solid;
 
             .carousel-img {
-                width: 600px;
-                height: 280px;
+                width: 330px;
+                height: 180px;
                 position: absolute;
-                top: 0em;
-                left: 10em;
+                top: 1em;
+                left: 14em;
             }
 
             .carousel-imgV {
-                width: 600px;
-                height: 280px;
+                width: 330px;
+                height: 180px;
                 position: absolute;
-                top: 19em;
-                left: 10em;
+                top: 13em;
+                left: 14em;
             }
-
-            .carousel-imgM {
-                width: 400px;
-                height: 300px;
-                position: absolute;
-                top: 0em;
-                left: 12em;
-            }
-       
-
-            .carousel-imgVM {
-                width: 400PX;
-                height: 300px;
-                position: absolute;
-                top: 19em;
-                left: 12em;
-            }
-
 
             .carousel-caption {
                 bottom: 0;
                 color: black;
                 border-bottom: 2px;
+                border: 10px coral solid;
 
-                p {
-                    font-size: 22px;
+                h3 {
+                    font-size: 10px;
                     bottom: 10em;
                     font-style: normal;
-                    font-family: Mont-Medium;
                 }
 
-            
+                p {
+                    font-size: 10px;
+                    bottom: 15em;
+                    left: 14em;
+                    font-style: normal;
+
+                }
             }
         }
     }
